Fix misaligned CSS in index.html

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ p, b, li, code, figcaption {
 
 .info_box p, figcaption {
     width: 80%;
+    margin: 0 auto;
 }
 
 
